# PlayingDuchampGNUChess

./: AUTHORS  ChangeLog  GCint.h  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acinclude.m4  aclocal.m4  book.c  bookmodified.c  cmd.c  common.h  config.h  config.status  configure  configure.ac  debug.c  epd.c  eval.h  getopt.c  getopt1.c  gnuchess  gnuchess.debug  hash.c  init.c  iterate.c  lexpgn.c  log  main.c  main.save.c  move.c  pgn.c  players.c  search.c  solve.c
autom4te.cache/: traces.0t
doc/: Makefile  Makefile.am  Makefile.in  README  gnuchess.info  gnuchess.texi  quotes.rb  version.texi
games/: gnuchess.debug  notweb.pgn  notweb2.pgn  notweb3.pgn
m4/: ChangeLog
man/: Makefile  Makefile.am  Makefile.in
misc/: gnuchess.eng
orig/: lexpgn.c
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  de.gmo  de.po  eo.gmo  eo.po  es.gmo  es.po  fr.gmo  fr.po  gl.gmo  gl.po  gnuchess.pot  nb.gmo  nb.po  nl.gmo  nl.po  pt_BR.gmo  pt_BR.po  sr.gmo  sr.po  uk.gmo  uk.po  vi.gmo  vi.po
src/: GCint.h  Makefile  Makefile.am  Makefile.in  components.cc  components.h  config.h  config.h.in  configmake.h  gnuchess  gnuchess.ini  gnuchessu  gnuchessx  main.cc
src/.deps/: components.Po  main.Po
src/adapter/: Makefile  Makefile.am  Makefile.in  adapter.cpp  adapter.h  attack.cpp  attack.h  board.cpp  board.h  book.cpp  book.h  book_make.cpp  book_make.h  book_merge.cpp  book_merge.h  colour.cpp  colour.h  engine.cpp  engine.h  epd.cpp  epd.h  fen.cpp  fen.h  game.cpp  game.h  hash.cpp  hash.h  io.cpp  io.h  line.cpp  line.h  list.cpp  list.h  main.cpp  main.h  move.cpp  move.h  move_do.cpp  move_do.h  move_gen.cpp  (+25 more)
src/adapter/.deps/: adapter.Po  attack.Po  board.Po  book.Po  book_make.Po  book_merge.Po  colour.Po  engine.Po  epd.Po  fen.Po  game.Po  hash.Po  io.Po  line.Po  list.Po  main.Po  move.Po  move_do.Po  move_gen.Po  move_legal.Po  option.Po  parse.Po  pgn.Po  posix.Po  random.Po  san.Po  search.Po  square.Po  uci.Po  util.Po
src/engine/: Makefile  Makefile.am  Makefile.in  attack.cpp  attack.h  board.cpp  board.h  book.cpp  book.h  colour.h  eval.cpp  eval.h  fen.cpp  fen.h  hash.cpp  hash.h  list.cpp  list.h  main.cpp  material.cpp  material.h  move.cpp  move.h  move_check.cpp  move_check.h  move_do.cpp  move_do.h  move_evasion.cpp  move_evasion.h  move_gen.cpp  move_gen.h  move_legal.cpp  move_legal.h  option.cpp  option.h  pawn.cpp  pawn.h  piece.cpp  piece.h  posix.cpp  (+29 more)
src/engine/.deps/: attack.Po  board.Po  book.Po  eval.Po  fen.Po  hash.Po  list.Po  main.Po  material.Po  move.Po  move_check.Po  move_do.Po  move_evasion.Po  move_gen.Po  move_legal.Po  option.Po  pawn.Po  piece.Po  posix.Po  protocol.Po  pst.Po  pv.Po  recog.Po  search.Po  search_full.Po  see.Po  sort.Po  trans.Po  util.Po  value.Po  vector.Po
src/frontend/: Makefile  Makefile.am  Makefile.in  atak.cc  cmd.cc  common.h  debug.cc  engine.cc  epd.cc  genmove.cc  init.cc  inlines.h  lexpgn.cc  lexpgn.ll  move.cc  output.cc  pgn.cc  players.cc  solve.cc  swap.cc  util.cc  version.h
src/frontend/.deps/: atak.Po  cmd.Po  debug.Po  engine.Po  epd.Po  genmove.Po  init.Po  lexpgn.Po  move.Po  output.Po  pgn.Po  players.Po  solve.Po  swap.Po  util.Po
